argocd/manifests/glance/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    app.kubernetes.io/name: glance
    app.kubernetes.io/managed-by: argocd
