argocd/manifests/glance/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
    app.kubernetes.io/name: glance
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
